fixed the values of the creating new values; added the normal pub/sub system

--- a/.env-example
+++ b/.env-example
@@ -12,3 +12,7 @@ ENC_SALT='SALT FOR THE ENCRYPTION'
 ENC_KEY='PRIVATE KEY FOR THE ENCRYPTION'
 
 PORT='PORT FOR THE WERBSERVER'
+
+GCP_PROJECT_ID='ID OF YOUR PROJECT IN GCP'
+GCP_TOPIC_ID='ID OF YOUR TOPIC IN GCP'
+GOOGLE_APPLICATION_CREDENTIALS='PATH TO YOUR JSON CREDENTIALS'
