--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 db.sqlite
+principal-iris-337317-18e16ba55e90.json
 # Created by https://www.toptal.com/developers/gitignore/api/python,flask
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,flask
 
