--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,32 @@
 anyio==3.4.0
 asgiref==3.4.1
+cachetools==4.2.4
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.10
 click==8.0.3
 cryptography==36.0.1
 fastapi==0.70.1
+google-api-core==2.3.2
+google-auth==2.3.3
+google-cloud-core==2.2.1
+google-cloud-storage==1.44.0
+google-crc32c==1.3.0
+google-resumable-media==2.1.0
+googleapis-common-protos==1.54.0
 greenlet==1.1.2
 h11==0.12.0
 idna==3.3
+protobuf==3.19.1
 psycopg2-binary==2.9.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==1.9.0
 python-dotenv==0.19.2
 requests==2.27.1
+rsa==4.8
+six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.29
 starlette==0.16.0
