added the checkings of the unnecessary arguments to it

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+test.txt
 db.sqlite
 principal-iris-337317-18e16ba55e90.json
 # Created by https://www.toptal.com/developers/gitignore/api/python,flask
