--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,11 @@ cffi==1.15.0
 charset-normalizer==2.0.10
 click==8.0.3
 cryptography==36.0.1
+cycler==0.11.0
+dnspython==2.1.0
+email-validator==1.1.3
 fastapi==0.70.1
+fonttools==4.28.5
 frozenlist==1.2.0
 google-api-core==2.3.2
 google-auth==2.3.3
@@ -20,26 +24,45 @@ google-cloud-storage==1.44.0
 google-crc32c==1.3.0
 google-resumable-media==2.1.0
 googleapis-common-protos==1.54.0
+gprof2dot==2021.2.21
 greenlet==1.1.2
 grpc-google-iam-v1==0.12.3
 grpcio==1.43.0
 grpcio-status==1.43.0
 h11==0.12.0
+httptools==0.2.0
 idna==3.3
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+kiwisolver==1.3.2
 libcst==0.3.23
+MarkupSafe==2.0.1
+matplotlib==3.5.1
 memory-profiler==0.60.0
 multidict==5.2.0
 mypy-extensions==0.4.3
+numpy==1.22.0
+orjson==3.6.5
+packaging==21.3
+Pillow==9.0.0
+pluggy==1.0.0
 proto-plus==1.19.8
 protobuf==3.19.1
 psutil==5.9.0
 psycopg2-binary==2.9.3
+py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==1.9.0
+pyparsing==3.0.6
+pytest==6.2.5
+pytest-profiling==1.7.0
+python-dateutil==2.8.2
 python-dotenv==0.19.2
-PyYAML==6.0
+python-multipart==0.0.5
+PyYAML==5.4.1
 requests==2.27.1
 rsa==4.8
 six==1.16.0
@@ -48,8 +71,13 @@ slackclient==2.9.3
 sniffio==1.2.0
 SQLAlchemy==1.4.29
 starlette==0.16.0
+toml==0.10.2
 typing-extensions==4.0.1
 typing-inspect==0.7.1
+ujson==4.3.0
 urllib3==1.26.7
-uvicorn==0.16.0
+uvicorn==0.15.0
+uvloop==0.16.0
+watchgod==0.7
+websockets==10.1
 yarl==1.7.2
